--- a/index.html
+++ b/index.html
@@ -6,30 +6,36 @@
   <link href="https://fonts.googleapis.com/css?family=Great+Vibes" rel="stylesheet" type="text/css"> 
  </head> 
  <body> 
-  <div class="top"> 
-  </div> 
-  <form method="post" action="/RSVPform/index.html"> 
+  <div class" message"> 
    <div class="info"> 
     <h1>RSVP</h1> 
     <h2>for the Voyager 2020 </h2> 
-    <h1>IEEE <br> <p class="line">________________________________________</p> </h1> 
+    <h1>IEEE <br> </h1> 
     <h2>The Details</h2> 
     <p>Saturday, March5, 2020</p> 
     <p>5:00 PM</p> 
     <br> 
-    <h2>Workshop &amp;Games</h2> 
+    <h2>Workshop &amp; Games</h2> 
     <p>M101</p> 
     <p>Vidyalankar institute of technology</p> 
-    <p class="line">________________________________________</p> 
-    <input type="text" placeholder="Name" name="name"> 
-    <!--   <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MmZidDlyZzJkNTRwNDd0NnNqOThycDg3bWwgcnMzMTY3MTk2QG0&amp;tmsrc=rs3167196%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en-GB.gif"></a> 
+    <!--  <input type="text" placeholder="Name" name="name"> 
+      <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MmZidDlyZzJkNTRwNDd0NnNqOThycDg3bWwgcnMzMTY3MTk2QG0&amp;tmsrc=rs3167196%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en-GB.gif"></a> 
  --> 
+    <br> 
+    <br> 
+    <p></p> 
+    <h3>Have you applied for the event</h3> 
+    <p></p> 
    </div> 
    <!--<input type="submit" name="submit">--> 
-   <button class="accept">Accept</button> 
+   <a class="link" href="index2.html"><button>Yes</button></a> 
+   <!-- <a class="decline"><button>Decline</button></a> 
+  --> 
    <br> 
    <br> 
+   <!--
    <a target="_blank" href="https://calendar.google.com/event?action=TEMPLATE&amp;tmeid=MmZidDlyZzJkNTRwNDd0NnNqOThycDg3bWwgcnMzMTY3MTk2QG0&amp;tmsrc=rs3167196%40gmail.com"><img border="0" src="https://www.google.com/calendar/images/ext/gc_button1_en-GB.gif"></a> 
-  </form> 
+ --> 
+  </div> 
  </body>
 </html>
