--- a/index2.html
+++ b/index2.html
@@ -2,20 +2,20 @@
 <html>
  <head></head> 
  <body> 
-  <div id="rsvp" class="text-center" data-scroll-reveal> 
+  <div id="rsvp" class="text-center" data-scroll-reveal style="background-image:url('pjimage.jpg')"> 
    <div class="heading"> 
-    <h2>RSVP</h2> 
+    <h2 style="font-size:8vw;">RSVP</h2> 
     <p><span></span><i class="fa fa-heart"></i><span></span></p> 
    </div> 
    <div class="row"> 
     <div class="form-group col-xs-12"> 
-     <label for="input-name">Name</label> 
+     <label for="input-name" style="font-size:3vw;">Name</label> 
      <input type="text" name="name" class="form-control" id="input-name" placeholder="John Doe" required> 
     </div> 
    </div> 
    <div class="row"> 
     <div class="form-group col-xs-12"> 
-     <label for="input-email">Email</label> 
+     <label for="input-email" style="font-size:3vw;">Email</label> 
      <input type="email" name="email" class="form-control" id="input-email" placeholder="name@domain.com" required> 
     </div> 
    </div> 
