--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
     <br> 
     <br> 
     <p></p> 
-    <h3>Have you applied for the event</h3> 
+    <h3>Are you free for the event</h3> 
     <p></p> 
    </div> 
    <!--<input type="submit" name="submit">--> 
    <a class="link" href="index2.html"><button>Yes</button></a> 
+   <a class="link" href="index1.html"><button>No</button></a> 
    <!-- <a class="decline"><button>Decline</button></a> 
   --> 
    <br> 
