--- a/index2.html
+++ b/index2.html
@@ -2,7 +2,7 @@
 <html>
  <head></head> 
  <body> 
-  <div id="rsvp" class="text-center" data-scroll-reveal style="background-image:url('pjimage.jpg')"> 
+  <div id="rsvp" class="text-center" data-scroll-reveal style="background-image:url('pjimage.jpg(1280×720')"> 
    <div class="heading"> 
     <h2 style="font-size:8vw;">RSVP</h2> 
     <p><span></span><i class="fa fa-heart"></i><span></span></p> 
