--- a/index2.html
+++ b/index2.html
@@ -2,12 +2,12 @@
 <html>
  <head></head> 
  <body> 
-  <div id="rsvp" class="text-center" data-scroll-reveal style="background-image:url('img.jpg')"> 
+  <div id="rsvp" class="text-center" data-scroll-reveal> 
    <div class="heading"> 
     <h2 style="font-size:8vw;">RSVP</h2> 
     <p><span></span><i class="fa fa-heart"></i><span></span></p> 
    </div> 
-   <div class="row"> 
+   <div class="row" style="background-image:url('img.jpg')"> 
     <div class="form-group col-xs-12"> 
      <label for="input-name" style="font-size:3vw;">Name</label> 
      <input type="text" name="name" class="form-control" id="input-name" placeholder="John Doe" required> 
