--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <input type="password" name="password" placeholder="Password" id="password"/>
         
           <input type="password" name="password2" placeholder="Retype password"/>
-        <button><a href="main.html" onclick="signUp()" type="submit" class="btn" id="signUp">Sign Up</a></button>
+    <button style="background: #f44336 !important"><a href="main.html" onclick="signUp()" type="submit" class="btn" id="signUp">Sign Up</a></button>
         </div>
         <div class="right-box">
           <span class="signinwith">Sign in with<br/>Social Network     </span>
