--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
   <title>Get services at your finger tips</title>
   <meta charset="utf-8"> 
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <meta name="google-signin-client_id" content="194228086996-fuq06atoargpcqf2qpavcgpm9800j2m6.apps.googleusercontent.com">
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> 
@@ -86,7 +88,7 @@
           <span class="signinwith">Sign in with<br/>Social Network     </span> 
         <!-- <button class="social facebook" style="padding-left: 20px; " onclick="checkLoginState()">Log in with Facebook</button> --> 
         <button class="social twitter" style="padding-left: 20px;"><b><i class="fa fa-twitter" aria-hidden="true"></i>   Log in with Twitter </b></button> 
-        <button class="social google" style="padding-left: 30px;"><b>Log in with Google+ </b></button>
+        <button class="social google" style="padding-left: 20px;"><b><i class="fab fa-google-plus-g" aria-hidden="true"></i>   Log in with Google+ </b></button>
         <div class="fb-login-button" data-width="" data-size="medium" data-button-type="login_with" data-layout="default" data-auto-logout-link="false" data-use-continue-as="false"></div>
       <!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
         </fb:login-button>-->
