--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	</head>	
 	<body>
 		  <nav class="navbar navbar-expand-md navbar-dark  sticky-top" style = "background-color : black" id="navigation"> 
-   <a class="navbar-brand" href="index.html"><img src="Capture.png" alt="Logo" width="160" height="40"></a> 
+   <a class="navbar-brand" href="index.html"><img src="Capture.PNG" alt="Logo" width="160" height="40"></a> 
    <br>
    <a href="cart.html"><button class="button1" style="margin: 0%;border: 0;"><i class="fa fa-shopping-cart fa-2x" aria-hidden="true"></i></button></a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"><span class="navbar-toggler-icon"></span> </button>  
