--- a/cart.html
+++ b/cart.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-md navbar-dark  sticky-top" style = "background-color : black" id="navigation"> 
-      <a class="navbar-brand" href="index.html"><img src="Capture.png" alt="Logo" width="160" height="40"></a> 
+      <a class="navbar-brand" href="index.html"><img src="Capture.PNG" alt="Logo" width="160" height="40"></a> 
       <br>
          <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"><span class="navbar-toggler-icon"></span> </button>  
       <!--<button type="submit"><i class="fa fa-search fa-2x"></i></button>-->
